fix: shrink-wrap news list image, below 50%

--- a/taccsite_cms/static/site_cms/css/src/_imports/tools/x-news.css
+++ b/taccsite_cms/static/site_cms/css/src/_imports/tools/x-news.css
@@ -158,7 +158,7 @@
     'media head'
     'media lead';
   /* To limit media width */
-  grid-template-columns: max-content 1fr;
+  grid-template-columns: fit-content(50%) 1fr;
   /* To give 'lead' remaining vert. space (removes gap between head and lead) */
   grid-template-rows: min-content 1fr;
 
